1998-07-15  Alex Roberts  <bse@dial.pipex.com>

	* Fixed hello.c: Now works with the current Plugin API! :)
	
	* Print functions work perfectly now (hopefully, i don't
	  have my printer set up properly), and save the print command
	  for the next session of gEdit.

1998-07-14  Alex Roberts  <bse@dial.pipex.com>

	* Put all Print specific functions, etc, into gE_print.h

	* Started implementing new Print functions, bewarend, it sigsegvs!

1998-07-13  Alex Roberts  <bse@dial.pipex.com>

	* Implemented Pixmaps only, Text only, or Both to the 
	  toolbar on start up...
	  
	* Modified homepage URL in the About box...
	
	* Upped version to 0.4.5, for next official release...
	
1998-07-13  Evan Lawrence <evan@worldpath.net>

	* The previous changes to the gnome menu code broke the
	  menus for multiple windows.. Fixed that..

1998-07-13  Andy Kahn <kahn@zk3.dec.com>

	(all changes are not Gnome specific)

	* fix "blinky" label in the about box (gtk-only version).  cleanup
	  and simplify gE_about.c.

	* for now, include pixmap file/description directly into code as
	  default pixmap for toolbar.

	  (new files: xpm/tb_cancel.xpm, xpm/tb_copy.xpm, xpm/tb_cut.xpm,
	  xpm/tb_edit.xpm, xpm/tb_help.xpm, xpm/tb_new.xpm, xpm/tb_open.xpm,
	  xpm/tb_paste.xpm, xpm/tb_print.xpm, xpm/tb_save.xpm,
	  xpm/tb_search.xpm)

	  TODO: allow user configurable path (saved in ~/.gedit) to load
	  user-prefered toolbar pixmaps.

	* for the statusbar label: add gE_msgbar_XXX() routines to manipulate
	  the label.  remembers last label printed and auto-clears the label
	  after a small timeout.

	* cleanup main.h:
	  	- drop unneeded includes.
		- for WITHOUT_GNOME, define auto_indent, show_tabs,
		show_status, and have_toolbar to be gboolean's instead of
		gint's.  define tab_pos to be GtkPositionType instead of gint.
		- move all function prototypes to their respective .h files.
		(new files: gE_about.h, gE_document.h, gE_files.h)

	* where applicable: