@@ -1,3 +1,10 @@
+1998-07-15  Evan Lawrence <evan@worldpath.net>
+
+	* Added plugin_program_quit to the plugins api...
+
+	* Fixed main.h file so toolbar.c doesn't give an error about
+	  the struct not containing some things..
+
 1998-07-15  Alex Roberts  <bse@dial.pipex.com>
 
 	* Fixed hello.c: Now works with the current Plugin API! :)
